--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2 class="about-title">Пишись у нас</h2>
             <p class="about-text">Охват территории  :“Кашира и Каширский район д.Кончинка, Иваньково ,
                 Ожерелье, Ступино и Ступинский район, Жилёво, Новое Ступино, Шугарово, Михнево,  Малино. Нужно указать.
-                КАК ЕЩЁ МОЖНО ЗАРАБОТАТЬ ДЕНЬГИ НА ТОМ,ЧТО ВЫ ИЗВЕСТНЫ? РЕКЛАМОЙ! ЕСЛИ ПРОВЕСТИ СТАТИСТИКУ,ТО У ВАС НЕТ НОВЫХ КЛИЕНТОВ, А БАЗА СТАРЫХ КЛИЕНТОВ СОКРАЩАЕТСЯ. МЫ !!!ПРИВЛЕКАЕМ ВАМ НОВЫХ КЛИЕНТОВ! телефон: 89162407305
+                как ещё можно заработать деньги на том,что вы известны? Рекламой! Если провести статистику, то у вас нет новых клиентов, а база старых клиентов сокращается. Мы!!! Привлекаем вам новых клиентов! телефон: 89162407305
             </p>
         </div>
         <div class="about-right">
@@ -44,7 +44,7 @@
     <div class="advantages" id="advantages">
         <div class="advantages-title">
             <img src="img/advantages-icon-microphone.svg" alt="microphone" class="advantages-title-icon">
-            <h1 class="advantages-title-text">Обращайся, у нас...</h1>
+            <h1 class="advantages-title-text">Обращайтесь, у нас...</h1>
         </div>
         <div class="advantages-cards-container">
             <div class="advantages-card card-1">
@@ -53,8 +53,8 @@
             </div>
             <div class="advantages-card card-2">
                 <p class="adv-card-number">2</p>
-                <p class="adv-card-text">УНИКАЛЬНОЕ ТОРГОВОЕ ПРЕДЛОЖЕНИЕ ДЛЯ БИЗНЕСА ЛЮБОГО РАЗМЕРА
-                    ПОСЛЕ ВЫХОДА РЕКЛАМЫ.
+                <p class="adv-card-text">Уникальное торговое предложение для бизнеса любого размера
+                    после выхода рекламы.
                 </p>
             </div>
             <div class="advantages-card card-3">
@@ -76,7 +76,8 @@
                <li>Лучшее оборудование</li>
                <li>Профессионалы в команде</li>
                <li>Любовь к хорошей музыке</li>
-               <li>Генеральный директор; Чугуева Лина Ивановна</li>
+               <li>Генеральный директор Чугуева Лина Ивановна</li>
+               <li>телефон 89162407305</li>
            </ul>
         </div>
     </div>
