--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
         <div class="about-left">
             <img class="about-header-logo" src="img/about-header-logo.svg" alt="header-logo-speaker">
             <h2 class="about-title">Пишись у нас</h2>
-            <p class="about-text">Охват территории  :“Кашира и Каширский район д.Кончинка, Иваньково ,
-                Ожерелье, Ступино и Ступинский район, Жилёво, Новое Ступино, Шугарово, Михнево,  Малино. Нужно указать.
-                как ещё можно заработать деньги на том,что вы известны? Рекламой! Если провести статистику, то у вас нет новых клиентов, а база старых клиентов сокращается. Мы!!! Привлекаем вам новых клиентов! телефон: 89162407305
-            </p>
+            <div class="about-text">
+                <p>Охват территории  :Кашира и Каширский район д.Кончинка, Иваньково ,
+                    Ожерелье, Ступино и Ступинский район, Жилёво, Новое Ступино, Шугарово, Михнево. Мы привлекаем вам новых клиентов! телефон: 89162407305
+                </p>
+                <a href="https://radiofmstupino.ru">ссылка на основной сайт</a>
+            </div>
         </div>
         <div class="about-right">
             <img class="about-right-img" src="img/about-head-emoji.svg" alt="emoji-pic">
@@ -45,7 +47,7 @@
     <div class="advantages" id="advantages">
         <div class="advantages-title">
             <img src="img/advantages-icon-microphone.svg" alt="microphone" class="advantages-title-icon">
-            <h1 class="advantages-title-text">Обращайтесь, у нас...</h1>
+            <h1 class="advantages-title-text">Размещайтесь, у нас...</h1>
         </div>
         <div class="advantages-cards-container">
             <div class="advantages-card card-1">
