--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="about" id="about">
         <div class="about-left">
             <img class="about-header-logo" src="img/about-header-logo.svg" alt="header-logo-speaker">
-            <h2 class="about-title">Пишись у нас</h2>
+            <h2 class="about-title"> Размещайся у нас</h2>
             <div class="about-text">
                 <p>Охват территории  :Кашира и Каширский район д.Кончинка, Иваньково ,
                     Ожерелье, Ступино и Ступинский район, Жилёво, Новое Ступино, Шугарово, Михнево. Мы привлекаем вам новых клиентов! телефон: 89162407305
