--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="advantages" id="advantages">
         <div class="advantages-title">
             <img src="img/advantages-icon-microphone.svg" alt="microphone" class="advantages-title-icon">
-            <h1 class="advantages-title-text">Размещайтесь, у нас...</h1>
+            <h1 class="advantages-title-text">Обращайтесь, у нас...</h1>
         </div>
         <div class="advantages-cards-container">
             <div class="advantages-card card-1">
