--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="about" id="about">
         <div class="about-left">
             <img class="about-header-logo" src="img/about-header-logo.svg" alt="header-logo-speaker">
-            <h2 class="about-title"> Размещайся у нас</h2>
+            <h2 class="about-title"> Размещайтесь у нас</h2>
             <div class="about-text">
                 <p>Охват территории  :Кашира и Каширский район д.Кончинка, Иваньково ,
                     Ожерелье, Ступино и Ступинский район, Жилёво, Новое Ступино, Шугарово, Михнево. Мы привлекаем вам новых клиентов! телефон: 89162407305
@@ -47,7 +47,7 @@
     <div class="advantages" id="advantages">
         <div class="advantages-title">
             <img src="img/advantages-icon-microphone.svg" alt="microphone" class="advantages-title-icon">
-            <h1 class="advantages-title-text">Обращайтесь, у нас...</h1>
+            <h1 class="advantages-title-text">Обращайтесь у нас...</h1>
         </div>
         <div class="advantages-cards-container">
             <div class="advantages-card card-1">
@@ -80,7 +80,7 @@
                <li>Профессионалы в команде</li>
                <li>Любовь к хорошей музыке</li>
                <li>Генеральный директор Чугуева Лина Ивановна</li>
-               <li>телефон 89162407305</li>
+               <li class="telefon">телефон 89162407305</li>
            </ul>
         </div>
     </div>
